some scripted options